--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@ $(document).ready(function(){
                   <i class="fas fa-clock"></i>
                 </div>
 
-                <h6 class="text-xl font-semibold">Around Since 2014!</h6>
+                <h6 class="text-xl font-semibold">Around Since 2022!</h6>
                 <p class="mt-2 mb-4 text-gray-600">
-                  Our guild was made back in 2014, making us one of the oldest guilds still around!
+                  Our guild was made back in 2022, making us one of the newest guilds around!
                 </p>
               </div>
             </div>
@@ -189,9 +189,9 @@ $(document).ready(function(){
 
                   <i class="fas fa-chart-line"></i>
                 </div>
-                <h6 class="text-xl font-semibold">Top 25 in the world!</h6>
+                <h6 class="text-xl font-semibold">Top ??? in the world!</h6>
                 <p class="mt-2 mb-4 text-gray-600">
-                  Our guild is currently ranked 22 out of all guilds on Hypixel!
+                  Our guild is currently ranked ??? out of all guilds on the Hypixel Network!
                 </p>
               </div>
             </div>
