--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Scandal</title>
-  <meta name="description" content="Welcome to Scandal, s relaxed yet competitive new guild aiming to someday reach the top!"/>
+  <meta name="description" content="Welcome to Scandal, Scandal is a relaxed yet competitive new guild aiming to someday reach the top!"/>
   <meta name="theme-color" content="#dc57eb" /><meta name="msapplication-TileColor" content="#dc57eb" />
   <meta property="og:image" content="https://scandal.halfcloud.org/images/scandal.png">
 
