last push before images get added

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ $(document).ready(function(){
                 Scandal
               </h1>
               <p class="mt-4 text-lg text-gray-300">
-                A Hypixel Guild for the best of the best
+                Scandal is a relaxed yet competitive new guild aiming to someday reach the top!
               </p> 
               <br>
               
