--- a/rules.html
+++ b/rules.html
@@ -77,10 +77,10 @@
 
         <li class="flex items-center">
           <a class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-            href="https://discord.gg/2w8S6H5xjf"> Discord⠀
+            href="https://discord.gg/wjbVkY5DSg"> Discord⠀
 
             <i class="lg:text-gray-300 text-gray-500 fab fa-discord text-lg leading-lg "></i>
-            <span class="lg:hidden inline-https://discord.gg/2w8S6H5xjfblock ml-2"></span>
+            <span class="lg:hidden inline-https://discord.gg/wjbVkY5DSgblock ml-2"></span>
           </a>
 
           </li>
